fix: refactor get available seats
